Initial multiarch support

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+.overlays
 *.built
 docker-rules.mk
 *~
@@ -8,5 +9,6 @@ source.tar.gz
 source.tar.xz
 sd*.raw*
 rootfs*
-*/*.tar
-*/*.built
+*.tar
+*.built
+tmp-*/
